<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.fragment.ShowHideActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/fl"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_main_home"
            android:id="@+id/bt_home"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_main_contacts"
            android:id="@+id/bt_contacts"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_main_my"
            android:id="@+id/bt_my"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
</LinearLayout>