<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/color_white"
    android:layout_margin="0dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_marginTop="@dimen/margin_common"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:text="@string/main_title"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="18dp"
            android:background="@color/color_split_primary"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:textColor="#63707F"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/ensure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_split_primary" />

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:textColor="#FF009C99"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>